--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.Navbar{
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  flex-direction: row;
+
+}
